--- a/xmvn-graph.html
+++ b/xmvn-graph.html
@@ -4,61 +4,181 @@
   <meta charset="UTF-8" />
   <title>XMvn Graph</title>
   <style>
-    html, body { height: 100%; margin: 0; }
-    #topbar {
-      display: flex; gap: 12px; align-items: center;
-      padding: 8px 12px; background: #f5f5f7; border-bottom: 1px solid #e5e5ea;
-      font: 14px/1.2 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    }
-    #sigma-container { height: calc(100% - 52px); }
-    .badge { padding: 2px 6px; border-radius: 10px; font-size: 12px; background:#eee; }
-    .spacer { flex: 1; }
-    label { display: inline-flex; align-items: center; gap: 6px; }
-    input[type="number"] { width: 5.5em; }
-    fieldset { border: 1px solid #ddd; border-radius: 8px; padding: 4px 8px; }
-    legend { padding: 0 6px; color: #555; }
-    button { cursor: pointer; }
+html, body { height: 100%; margin: 0; }
+
+#topbar {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  padding: 8px 12px;
+  background: #f5f5f7;
+  border-bottom: 1px solid #e5e5ea;
+  font: 14px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+}
+
+#sigma-container {
+  height: calc(100% - 100px); /* taller topbar now */
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.title {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.badge {
+  padding: 2px 6px;
+  border-radius: 10px;
+  font-size: 12px;
+  background: #eee;
+  align-self: flex-start;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  flex: 1;
+}
+
+#filter-fieldset {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 4px 8px;
+  min-width: 200px;
+}
+
+#filter-fieldset legend {
+  padding: 0 6px;
+  color: #555;
+  font-weight: 500;
+}
+
+#log {
+  height: 80px;
+  overflow-y: auto;
+  font-family: monospace;
+  background: #fafafa;
+  color: #333;
+  font-size: 12px;
+  padding: 6px 8px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.layout-controls {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  background: #fff;
+  padding: 4px 10px;
+  font-size: 13px;
+}
+
+button:hover {
+  background: #f0f0f0;
+}
+
+.corner-toggle {
+  font-size: 13px;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 2px 6px;
+  align-self: flex-start;
+}
+
+#tooltip {
+  position: absolute;
+  background: rgba(0,0,0,0.8);
+  color: #fff;
+  border-radius: 4px;
+  padding: 6px 8px;
+  font-size: 20px;
+  pointer-events: none;
+  display: none;
+  z-index: 1000;
+}
+
   </style>
 </head>
 <body>
-  <div id="topbar">
-    <strong>XMvn Graph</strong>
+<div id="topbar">
+  <div class="left">
+    <strong class="title">XMvn Graph</strong>
     <span class="badge" id="stats">0 nodes • 0 edges</span>
-    <div id="log" style="
-      height: 80px;
-      overflow-y: auto;
-      width: 200px;
-      font-family: monospace;
-      background: #222;
-      color: #cfcfcf;
-      font-size: 13px;
-      padding: 8px 12px;
-      border-top: 1px solid #444;">
-    </div>
+  </div>
+
+  <div class="center">
     <fieldset id="filter-fieldset">
       <legend>Filter</legend>
     </fieldset>
-
-    <div class="spacer"></div>
-
-    <label>
-      Layout
-      <select id="layout-select">
-        <option value="none">None (Manual)</option>
-        <option value="random">Randomize</option>
-        <option value="fa2" selected>ForceAtlas2</option>
-      </select>
-    </label>
-
-    <label>Iterations <input type="number" id="iterations" min="1" step="10" value="200"></label>
-    <button id="run-layout">Run</button>
-    <button id="start-loop">Start</button>
-    <button id="stop-loop" disabled>Stop</button>
-
-    <button id="reset-camera" title="Reset camera">Reset View</button>
+    <div id="log"></div>
   </div>
 
-  <div id="sigma-container"></div>
+  <div class="right">
+    <div class="layout-controls">
+      <label>
+        Layout
+        <select id="layout-select">
+          <option value="none">None (Manual)</option>
+          <option value="random">Randomize</option>
+          <option value="fa2" selected>ForceAtlas2</option>
+        </select>
+      </label>
+      <label>
+        Iterations
+        <input type="number" id="iterations" min="1" step="10" value="200">
+      </label>
+    </div>
+
+    <div class="buttons">
+      <button id="run-layout">Run</button>
+      <button id="start-loop">Start</button>
+      <button id="stop-loop" disabled>Stop</button>
+      <button id="reset-camera" title="Reset camera">Reset View</button>
+    </div>
+
+    <div class="options">
+      <label class="corner-toggle">
+        Tooltip position
+        <select id="tooltip-position">
+          <option value="node" selected>Near node</option>
+          <option value="top-left">Top-left</option>
+          <option value="top-right">Top-right</option>
+          <option value="bottom-left">Bottom-left</option>
+          <option value="bottom-right">Bottom-right</option>
+        </select>
+      </label>
+    </div>
+  </div>
+</div>
+
+<div id="sigma-container"></div>
+<div id="tooltip"></div>
+
 <script type="importmap">
 {
   "imports": {
@@ -224,7 +344,7 @@ function main() {
   const settings = forceAtlas2.inferSettings(graph);
   forceAtlas2.assign(graph, { iterations: 200, settings });
   renderer.refresh();
-
+  setupTooltips(graph, renderer);
   setupHoverHighlight(graph, renderer);
   setupCamera(renderer);
   setupNodeDragging(renderer, graph);
@@ -256,6 +376,63 @@ function dedupeEdges(edges) {
     return true;
   });
 }
+
+function setupTooltips(graph, renderer) {
+  const container = renderer.getContainer();
+  const tooltip = document.getElementById("tooltip");  // now from template
+  const tooltipSelect = document.getElementById("tooltip-position"); // dropdown if you keep it
+
+  renderer.on("enterNode", ({ node }) => {
+    const meta = graph.getNodeAttribute(node, "meta") || {};
+    const label = graph.getNodeAttribute(node, "label");
+    tooltip.innerHTML =
+      "<b>" + label + "</b><br>" +
+      Object.entries(meta).map(([k, v]) => k + ": " + v).join("<br>");
+    tooltip.style.display = "block";
+
+    positionTooltip(node);
+    tooltip.dataset.node = node;
+  });
+
+  renderer.on("leaveNode", () => {
+    tooltip.style.display = "none";
+    delete tooltip.dataset.node;
+  });
+
+  renderer.getCamera().on("updated", () => {
+    if (tooltip.style.display === "block" && tooltip.dataset.node) {
+      positionTooltip(tooltip.dataset.node);
+    }
+  });
+
+  function positionTooltip(node) {
+    const mode = tooltipSelect?.value || "node";
+    if (mode === "node") {
+      const x = graph.getNodeAttribute(node, "x");
+      const y = graph.getNodeAttribute(node, "y");
+      const pos = renderer.graphToViewport({ x, y });
+      tooltip.style.left = pos.x + 15 + "px";
+      tooltip.style.top = pos.y + 15 + "px";
+    }
+    else if (mode === "top-left") {
+      tooltip.style.left = "10px";
+      tooltip.style.top = "40px";
+    }
+    else if (mode === "top-right") {
+      tooltip.style.left = container.clientWidth - tooltip.offsetWidth - 10 + "px";
+      tooltip.style.top = "40px";
+    }
+    else if (mode === "bottom-left") {
+      tooltip.style.left = "10px";
+      tooltip.style.top = container.clientHeight - tooltip.offsetHeight - 10 + "px";
+    }
+    else if (mode === "bottom-right") {
+      tooltip.style.left = container.clientWidth - tooltip.offsetWidth - 10 + "px";
+      tooltip.style.top = container.clientHeight - tooltip.offsetHeight - 10 + "px";
+    }
+  }
+}
+
 
 function setupStats(graph) {
   const statsEl = document.getElementById("stats");
