--- a/xmvn-graph.html
+++ b/xmvn-graph.html
@@ -134,7 +134,6 @@ button:hover {
   font-family: monospace;
   font-size: 13px;
 }
-
   </style>
 </head>
 <body>
@@ -202,6 +201,8 @@ button:hover {
     "sigma": "https://cdn.jsdelivr.net/npm/sigma@3/+esm",
     "graphology": "https://cdn.jsdelivr.net/npm/graphology@0.25.4/+esm",
     "@sigma/node-image": "https://cdn.jsdelivr.net/npm/@sigma/node-image@3/+esm",
+    "@sigma/rendering": "https://cdn.jsdelivr.net/npm/sigma@3/rendering/dist/sigma-rendering.esm.js/+esm",
+    "@sigma/utils": "https://cdn.jsdelivr.net/npm/sigma@3/utils/dist/sigma-utils.esm.js/+esm",
     "graphology-layout-forceatlas2": "https://cdn.jsdelivr.net/npm/graphology-layout-forceatlas2@0.10.1/+esm"
   }
 }
@@ -212,56 +213,44 @@ import Sigma from "sigma";
 import Graph from "graphology";
 import { createNodeImageProgram } from "@sigma/node-image";
 import forceAtlas2 from "graphology-layout-forceatlas2";
-const DATA = /* XMVN_DATA_START */{
-  "attributes": { "name": "Build Tool Graph Example" },
-  "nodes": [
-    // Modules & Subprojects
-    { "key": "mod_app",   "attributes": { "label": "app",   "x": 0,  "y": 0,   "size": 10, "color": "#1f77b4", "meta": { "nodeType": "module", "buildTool": "maven" } } },
-    { "key": "mod_core",  "attributes": { "label": "core",  "x": 30, "y": -20, "size": 9,  "color": "#2ca02c", "meta": { "nodeType": "module", "buildTool": "gradle" } } },
-    { "key": "subproj_ui","attributes": { "label": "ui",    "x": -30,"y": -10, "size": 8,  "color": "#ff7f0e", "meta": { "nodeType": "subproject", "buildTool": "make" } } },
+import * as rendering from "@sigma/rendering";
 
-    // Libraries
-    { "key": "lib_guava", "attributes": { "label": "guava", "x": 45, "y": 10,  "size": 7,  "color": "#d62728", "meta": { "nodeType": "library", "artifactType": "jar" } } },
-    { "key": "lib_log4j", "attributes": { "label": "log4j", "x": 40, "y": -30, "size": 7,  "color": "#9467bd", "meta": { "nodeType": "library", "artifactType": "jar" } } },
 
-    // Special Jars
-    { "key": "testjar",   "attributes": { "label": "app-tests", "x": 0, "y": 40, "size": 6, "color": "#e377c2", "meta": { "nodeType": "testjar" } } },
-    { "key": "srcjar",    "attributes": { "label": "app-src",   "x": 0, "y": 55, "size": 6, "color": "#17becf", "meta": { "nodeType": "srcjar" } } },
-    { "key": "docjar",    "attributes": { "label": "app-docs",  "x": 0, "y": 70, "size": 6, "color": "#bcbd22", "meta": { "nodeType": "docjar" } } },
+const ARROW_PRESETS = {
+  xslim:    { length: 9.0, wideness: 1.5 },
+  slim:     { length: 9.0, wideness: 3.0 },
+  balanced: { length: 9.0, wideness: 4.5 },
+  fat:      { length: 9.0, wideness: 6.0 },
+  radius:   { length: 3.0, wideness: 3.0, useRadius: true }
+};
+/**
+factor - tweak this to make arrowheads longer or wider
+*/
+function createEdgeArrowScaledProgram(inputOptions = {}, preset = "balanced", factor = 1.0) {
+  function createHead(options = {}) {
+    const Base = rendering.createEdgeArrowHeadProgram(options);
+    return class EdgeArrowHeadScaledProgram extends Base {
+      setUniforms(params, info) {
+        super.setUniforms(params, info);
+        const { gl, uniformLocations } = info;
+        const style = ARROW_PRESETS[preset] || ARROW_PRESETS.balanced;
 
-    // BOM, POM, ZIP, Docker, WAR, EAR
-    { "key": "bom_spring", "attributes": { "label": "spring-bom", "x": -50, "y": -20, "size": 6, "color": "#e377c2", "meta": { "nodeType": "bom" } } },
-    { "key": "pom_parent", "attributes": { "label": "parent-pom", "x": -40, "y": 15,  "size": 6, "color": "#7f7f7f", "meta": { "nodeType": "pom" } } },
-    { "key": "zip_dist",   "attributes": { "label": "dist.zip",   "x": 20,  "y": 60,  "size": 6, "color": "#8c564b", "meta": { "nodeType": "zip" } } },
-    { "key": "docker_img", "attributes": { "label": "app:docker", "x": 30,  "y": 75,  "size": 8, "color": "#00bfff", "meta": { "nodeType": "docker" } } },
-    { "key": "war_app",    "attributes": { "label": "webapp.war", "x": -10, "y": 60,  "size": 7, "color": "#ff1493", "meta": { "nodeType": "war" } } },
-    { "key": "ear_app",    "attributes": { "label": "enterprise.ear", "x": -25, "y": 75, "size": 7, "color": "#f39c12", "meta": { "nodeType": "ear" } } }
-  ],
-  "edges": [
-    // Standard Maven/Gradle scopes
-    { "key": "app_core", "source": "mod_app", "target": "mod_core", "attributes": { "size": 1.5, "color": "#1f77b4" }, "meta": { "edgeType": "compile", "scope": "compile" } },
-    { "key": "core_guava", "source": "mod_core", "target": "lib_guava", "attributes": { "size": 1, "color": "#d62728" }, "meta": { "edgeType": "runtime", "scope": "runtime" } },
-    { "key": "app_log4j",  "source": "mod_app", "target": "lib_log4j", "attributes": { "size": 1, "color": "#9467bd" }, "meta": { "edgeType": "provided", "scope": "provided" } },
-    { "key": "core_testjar", "source": "mod_core", "target": "testjar", "attributes": { "size": 1, "color": "#e377c2" }, "meta": { "edgeType": "test", "scope": "test" } },
-    { "key": "core_srcjar",  "source": "mod_core", "target": "srcjar", "attributes": { "size": 1, "color": "#17becf" }, "meta": { "edgeType": "system", "scope": "system" } },
-    { "key": "core_docjar",  "source": "mod_core", "target": "docjar", "attributes": { "size": 1, "color": "#bcbd22" }, "meta": { "edgeType": "doc", "scope": "doc" } },
-    { "key": "app_subproj_ui", "source": "mod_app", "target": "subproj_ui", "attributes": { "size": 1.2, "color": "#ff7f0e" }, "meta": { "edgeType": "testCompile", "scope": "testCompile" } },
-    { "key": "app_bom_spring", "source": "mod_app", "target": "bom_spring", "attributes": { "size": 1, "color": "#e377c2" }, "meta": { "edgeType": "bom-import" } },
-    { "key": "app_pom_parent", "source": "mod_app", "target": "pom_parent", "attributes": { "size": 1, "color": "#7f7f7f" }, "meta": { "edgeType": "parent" } },
+        let length = factor * style.length;
+        let wideness = factor * style.wideness;
 
-    // Output packaging
-    { "key": "app_zip",     "source": "mod_app", "target": "zip_dist",   "attributes": { "size": 1, "color": "#8c564b" }, "meta": { "edgeType": "zip" } },
-    { "key": "app_docker",  "source": "mod_app", "target": "docker_img", "attributes": { "size": 1, "color": "#00bfff" }, "meta": { "edgeType": "docker" } },
-    { "key": "app_war",     "source": "mod_app", "target": "war_app",    "attributes": { "size": 1, "color": "#ff1493" }, "meta": { "edgeType": "war" } },
-    { "key": "app_ear",     "source": "mod_app", "target": "ear_app",    "attributes": { "size": 1, "color": "#f39c12" }, "meta": { "edgeType": "ear" } },
-
-    // Non-Java edges (simulated service calls)
-    { "key": "app_rest",    "source": "mod_app", "target": "mod_core",   "attributes": { "size": 2, "color": "#2ecc40", "label": "REST" },    "meta": { "edgeType": "rest-call", "protocol": "rest" } },
-    { "key": "app_soap",    "source": "mod_app", "target": "subproj_ui", "attributes": { "size": 2, "color": "#2980b9", "label": "SOAP" },    "meta": { "edgeType": "soap-call", "protocol": "soap" } },
-    { "key": "app_graphql", "source": "mod_app", "target": "lib_log4j",  "attributes": { "size": 2, "color": "#fdcb6e", "label": "GraphQL" }, "meta": { "edgeType": "graphql", "protocol": "graphql" } },
-    { "key": "app_gwt",     "source": "subproj_ui", "target": "mod_core", "attributes": { "size": 2, "color": "#6c5ce7", "label": "GWT" },    "meta": { "edgeType": "gwt-call", "protocol": "gwt" } }
-  ]
-} /* XMVN_DATA_END */;
+        if (style.useRadius) {
+          // scale with node radius (a_radius comes from processVisibleItem)
+          length *= params.sizeRatio;
+          wideness *= params.sizeRatio;
+        }
+        gl.uniform1f(uniformLocations.u_lengthToThicknessRatio, length);
+        gl.uniform1f(uniformLocations.u_widenessToThicknessRatio, wideness);
+      }
+    };
+  }
+  return rendering.createEdgeCompoundProgram([rendering.createEdgeClampedProgram(inputOptions), createHead(inputOptions)]);
+}
+const EdgeArrowScaledProgram = createEdgeArrowScaledProgram({});
 
 const state = {
   hoveredNode: null,
@@ -330,8 +319,6 @@ const EDGE_TYPE_COLORS = {
   project_link:       "#1f77b4"
 };
 
-main();
-
 function main() {
   const container = document.getElementById("sigma-container");
   const graph = new Graph();
@@ -347,14 +334,32 @@ function main() {
   });
 
   graph.import(DATA);
-
+  //sample graph
+  //graph.addNode("a", { x: 0, y: 0, size: 10, label: "Alex" });
+  //graph.addNode("b", { x: 10, y: 10, size: 10, label: "Bill" });
+  //graph.addEdge("b", "b", { type: "arrowScaled" });
   setupStats(graph);
   const renderer = new Sigma(graph, container, {
     renderEdgeLabels: true,
-    defaultEdgeType: "arrow",
     minZoomRatio: 0.1,
     maxZoomRatio: 10,
-    nodeProgramClasses: { image: createNodeImageProgram() }
+    nodeProgramClasses: {
+      circle: rendering.NodeCircleProgram,
+      point: rendering.NodePointProgram,
+      image: createNodeImageProgram()
+    },
+    edgeProgramClasses: {
+      arrow: rendering.EdgeArrowProgram,
+      clamped: rendering.EdgeClampedProgram,
+      doubleArrow: rendering.EdgeDoubleArrowProgram,
+      doubleClamped: rendering.EdgeDoubleClampedProgram,
+      line: rendering.EdgeLineProgram,
+      rectangle: rendering.EdgeRectangleProgram,
+      triangle: rendering.EdgeTriangleProgram,
+      arrowScaled: EdgeArrowScaledProgram,
+      //curved: rendering.EdgeCurveProgram
+    },
+    defaultEdgeType: "arrowScaled",
   });
 
   // Kick-start layout
@@ -369,6 +374,7 @@ function main() {
   setupSearch(graph, renderer);
   setupSelection(graph, renderer);
   setupLayouts(graph);
+  console.log("rendering finished");
 }
 
 function assignColors(nodes, edges) {
@@ -778,6 +784,62 @@ function setupSelection(graph, renderer) {
   }
 }
 
+
+const DATA =
+/* XMVN_DATA_START */
+{
+  "attributes": { "name": "Build Tool Graph Example" },
+  "nodes": [
+    // Modules & Subprojects
+    { "key": "mod_app",   "attributes": { "label": "app",   "x": 0,  "y": 0,   "size": 10, "color": "#1f77b4", "meta": { "nodeType": "module", "buildTool": "maven" } } },
+    { "key": "mod_core",  "attributes": { "label": "core",  "x": 30, "y": -20, "size": 9,  "color": "#2ca02c", "meta": { "nodeType": "module", "buildTool": "gradle" } } },
+    { "key": "subproj_ui","attributes": { "label": "ui",    "x": -30,"y": -10, "size": 8,  "color": "#ff7f0e", "meta": { "nodeType": "subproject", "buildTool": "make" } } },
+
+    // Libraries
+    { "key": "lib_guava", "attributes": { "label": "guava", "x": 45, "y": 10,  "size": 7,  "color": "#d62728", "meta": { "nodeType": "library", "artifactType": "jar" } } },
+    { "key": "lib_log4j", "attributes": { "label": "log4j", "x": 40, "y": -30, "size": 7,  "color": "#9467bd", "meta": { "nodeType": "library", "artifactType": "jar" } } },
+
+    // Special Jars
+    { "key": "testjar",   "attributes": { "label": "app-tests", "x": 0, "y": 40, "size": 6, "color": "#e377c2", "meta": { "nodeType": "testjar" } } },
+    { "key": "srcjar",    "attributes": { "label": "app-src",   "x": 0, "y": 55, "size": 6, "color": "#17becf", "meta": { "nodeType": "srcjar" } } },
+    { "key": "docjar",    "attributes": { "label": "app-docs",  "x": 0, "y": 70, "size": 6, "color": "#bcbd22", "meta": { "nodeType": "docjar" } } },
+
+    // BOM, POM, ZIP, Docker, WAR, EAR
+    { "key": "bom_spring", "attributes": { "label": "spring-bom", "x": -50, "y": -20, "size": 6, "color": "#e377c2", "meta": { "nodeType": "bom" } } },
+    { "key": "pom_parent", "attributes": { "label": "parent-pom", "x": -40, "y": 15,  "size": 6, "color": "#7f7f7f", "meta": { "nodeType": "pom" } } },
+    { "key": "zip_dist",   "attributes": { "label": "dist.zip",   "x": 20,  "y": 60,  "size": 6, "color": "#8c564b", "meta": { "nodeType": "zip" } } },
+    { "key": "docker_img", "attributes": { "label": "app:docker", "x": 30,  "y": 75,  "size": 8, "color": "#00bfff", "meta": { "nodeType": "docker" } } },
+    { "key": "war_app",    "attributes": { "label": "webapp.war", "x": -10, "y": 60,  "size": 7, "color": "#ff1493", "meta": { "nodeType": "war" } } },
+    { "key": "ear_app",    "attributes": { "label": "enterprise.ear", "x": -25, "y": 75, "size": 7, "color": "#f39c12", "meta": { "nodeType": "ear" } } }
+  ],
+  "edges": [
+    // Standard Maven/Gradle scopes
+    { "key": "app_core", "source": "mod_app", "target": "mod_core", "attributes": { "size": 1.5, "color": "#1f77b4" }, "meta": { "edgeType": "compile", "scope": "compile" } },
+    { "key": "core_guava", "source": "mod_core", "target": "lib_guava", "attributes": { "size": 1, "color": "#d62728" }, "meta": { "edgeType": "runtime", "scope": "runtime" } },
+    { "key": "app_log4j",  "source": "mod_app", "target": "lib_log4j", "attributes": { "size": 1, "color": "#9467bd" }, "meta": { "edgeType": "provided", "scope": "provided" } },
+    { "key": "core_testjar", "source": "mod_core", "target": "testjar", "attributes": { "size": 1, "color": "#e377c2" }, "meta": { "edgeType": "test", "scope": "test" } },
+    { "key": "core_srcjar",  "source": "mod_core", "target": "srcjar", "attributes": { "size": 1, "color": "#17becf" }, "meta": { "edgeType": "system", "scope": "system" } },
+    { "key": "core_docjar",  "source": "mod_core", "target": "docjar", "attributes": { "size": 1, "color": "#bcbd22" }, "meta": { "edgeType": "doc", "scope": "doc" } },
+    { "key": "app_subproj_ui", "source": "mod_app", "target": "subproj_ui", "attributes": { "size": 1.2, "color": "#ff7f0e" }, "meta": { "edgeType": "testCompile", "scope": "testCompile" } },
+    { "key": "app_bom_spring", "source": "mod_app", "target": "bom_spring", "attributes": { "size": 1, "color": "#e377c2" }, "meta": { "edgeType": "bom-import" } },
+    { "key": "app_pom_parent", "source": "mod_app", "target": "pom_parent", "attributes": { "size": 1, "color": "#7f7f7f" }, "meta": { "edgeType": "parent" } },
+
+    // Output packaging
+    { "key": "app_zip",     "source": "mod_app", "target": "zip_dist",   "attributes": { "size": 1, "color": "#8c564b" }, "meta": { "edgeType": "zip" } },
+    { "key": "app_docker",  "source": "mod_app", "target": "docker_img", "attributes": { "size": 1, "color": "#00bfff" }, "meta": { "edgeType": "docker" } },
+    { "key": "app_war",     "source": "mod_app", "target": "war_app",    "attributes": { "size": 1, "color": "#ff1493" }, "meta": { "edgeType": "war" } },
+    { "key": "app_ear",     "source": "mod_app", "target": "ear_app",    "attributes": { "size": 1, "color": "#f39c12" }, "meta": { "edgeType": "ear" } },
+
+    // Non-Java edges (simulated service calls)
+    { "key": "app_rest",    "source": "mod_app", "target": "mod_core",   "attributes": { "size": 2, "color": "#2ecc40", "label": "REST" },    "meta": { "edgeType": "rest-call", "protocol": "rest" } },
+    { "key": "app_soap",    "source": "mod_app", "target": "subproj_ui", "attributes": { "size": 2, "color": "#2980b9", "label": "SOAP" },    "meta": { "edgeType": "soap-call", "protocol": "soap" } },
+    { "key": "app_graphql", "source": "mod_app", "target": "lib_log4j",  "attributes": { "size": 2, "color": "#fdcb6e", "label": "GraphQL" }, "meta": { "edgeType": "graphql", "protocol": "graphql" } },
+    { "key": "app_gwt",     "source": "subproj_ui", "target": "mod_core", "attributes": { "size": 2, "color": "#6c5ce7", "label": "GWT" },    "meta": { "edgeType": "gwt-call", "protocol": "gwt" } }
+  ]
+}
+/* XMVN_DATA_END */;
+
+main();
 </script>
 </body>
 </html>
